Fixed no-results text behind background image (#164).
Because div had no position property z-indexes where not working. Fixed by adding a special fix class.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,3 +30,7 @@
 .v-content {
   margin-top: $nav-bar-height;
 }
+
+.fix-z-index {
+  position: relative;
+}
